@@ -286,6 +286,7 @@ static BoardPlugin menu_bp =
  */
 
 static gboolean to_tux = FALSE;
+static gboolean lock_user = FALSE;
 static GQueue *tux_memory;
 static gint tux_memory_size;
 static gint tux_memory_sizes[] = { 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 };
@@ -975,6 +976,8 @@ static void memory_next_level()
 
   create_item(boardRootItem);
 
+  lock_user = FALSE;
+
   if (currentMode == MODE_TUX){
 	tux_memory_size = tux_memory_sizes[gcomprisBoard->level];
 	g_warning("tux_memory_size %d", tux_memory_size );
@@ -1513,20 +1516,23 @@ static void check_win()
     timeout_tux = 2000;
   }
 
+
   // Check win
   if (compare_card((gpointer) firstCard, (gpointer) secondCard) == 0) {
     gc_sound_play_ogg ("sounds/flip.wav", NULL);
     win_id = g_timeout_add (timeout,
 			    (GSourceFunc) hide_card, NULL);
+    lock_user = FALSE;
     return;
   }
 
   if (currentMode == MODE_TUX){
-		 /* time to tux to play, after a delay */
+    /* time to tux to play, after a delay */
     to_tux = TRUE;
     g_warning("Now tux will play !");
     tux_id = g_timeout_add (timeout_tux,
 			    (GSourceFunc) tux_play, NULL);
+    lock_user = FALSE;
     return;
   }
 
@@ -1547,7 +1553,7 @@ item_event(GnomeCanvasItem *item, GdkEvent *event, MemoryItem *memoryItem)
          case 1:
 
 	   if (currentMode == MODE_TUX){
-	     if (to_tux){
+	     if (to_tux || lock_user){
 	       g_warning("He ! it's tux turn !");
 	       return FALSE;
 	     }
@@ -1590,10 +1596,12 @@ item_event(GnomeCanvasItem *item, GdkEvent *event, MemoryItem *memoryItem)
 	       if (currentMode == MODE_TUX)
 		 add_card_in_tux_memory(memoryItem);
 	       display_card(memoryItem, ON_FRONT);
-	       if (currentUiMode == UIMODE_SOUND)
+	       if (currentUiMode == UIMODE_SOUND) {
 		 // Check win is called from callback return
+		 // The user lost, make sure she won't play again before tux
+		 lock_user = TRUE;
 		 return TRUE;
-	       else {
+	       } else {
 		 check_win();
 		 return TRUE;
 	       }
