@@ -1,3 +1,12 @@
+2009-03-17  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- Fixed a little issue. It was possible for the user in
+	  memory sound against tux to click on as many card she wants
+	  if she does not wait for the end of the sound.
+
+	* src/boards/memory.c: (memory_next_level), (check_win),
+	(item_event):
+
 2009-03-15  Bruno Coudoin  <bruno.coudoin@free.fr>
 
 	- Replaced letter that differenciate blocks for
